base: Introduce FontService
In addition to shipping with a series of fonts, this service
also supports user apps that provide fonts. To create a font
provider app, put the following bool into your package resources

<bool name="custom_rom_font_provider">true</bool>

Then put the font zips into

/res/assets/fonts/font1.zip... font2.zip...

At a later time, other font sources may be supported, but this
is not certain.

Change-Id: Ie3b4e3e740956f34b0ffb45c4632c2f62f26f48a

--- a/core/res/res/values/bootleg_arrays.xml
+++ b/core/res/res/values/bootleg_arrays.xml
@@ -11,4 +11,8 @@
         <item>reboot_bootloader</item>
         <item>reboot_sysui</item>
     </string-array>
+
+    <!-- System font packages (overlay in vendor) -->
+    <string-array name="config_fontPackages" translatable="false">
+    </string-array>
 </resources>
