--- a/core/res/res/values/bootleg_symbols.xml
+++ b/core/res/res/values/bootleg_symbols.xml
@@ -80,4 +80,7 @@
     <!-- Define device configs on boot -->
     <java-symbol type="array" name="global_device_configs_override" />
     <java-symbol type="array" name="device_configs_override" />
+
+    <!-- System fonts -->
+    <java-symbol type="array" name="config_fontPackages" />
 </resources>
