--- a/core/res/res/values/bootleg_arrays.xml
+++ b/core/res/res/values/bootleg_arrays.xml
@@ -4,5 +4,7 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources>
-
+    <!-- System font packages (overlay in vendor) -->
+    <string-array name="config_fontPackages" translatable="false">
+    </string-array>
 </resources>
