--- a/packages/SystemUI/res/values/bootleg_styles.xml
+++ b/packages/SystemUI/res/values/bootleg_styles.xml
@@ -4,7 +4,7 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources>
-    <style name="Theme.Island.SystemUI" parent="@android:style/Theme.DeviceDefault.DayNight">
+    <style name="Theme.Island.SystemUI" parent="@style/Theme.MaterialComponents.DayNight">
         <item name="android:fontFamily">@*android:string/config_bodyFontFamily</item>
     </style>
   <style name="islandBackgroundOverlay" parent="">
