--- a/core/res/res/values/bootleg_symbols.xml
+++ b/core/res/res/values/bootleg_symbols.xml
@@ -13,6 +13,7 @@
 
     <!-- For dynamic default font styles -->
     <java-symbol type="string" name="config_bodyFontFamily" />
+    <java-symbol type="string" name="config_clockFontFamily" />
 
     <!-- Package Manager -->
     <java-symbol type="array" name="config_deviceDisabledComponents" />
